<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/btn_help"
        style="@style/ClickableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_bg"
        android:backgroundTint="@color/light_pink"
        android:gravity="center"
        android:minWidth="100dp"
        android:minHeight="60dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:src="@drawable/help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/help"
            android:textColor="@color/orange"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_phone"
        style="@style/ClickableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_spacing"
        android:background="@drawable/rounded_button_bg"
        android:backgroundTint="@color/very_light_green"
        android:gravity="center"
        android:minWidth="100dp"
        android:minHeight="60dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/call"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_repeat"
        style="@style/ClickableStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_bg"
        android:backgroundTint="@color/very_light_blue"
        android:gravity="center"
        android:minWidth="100dp"
        android:minHeight="60dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:src="@drawable/repeat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/repeat"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>