<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="driver"
            type="com.example.ui.android.task.junior.models.user.driver.BaseDriver" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_dummy_driver"
            style="@style/BottomSheetTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:text="@string/driver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/small_spacing"
            android:background="@color/gray_divider_color"
            app:layout_constraintTop_toBottomOf="@id/txt_dummy_driver"
            tools:layout_editor_absoluteX="16dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_driver"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/normal_spacing"
            app:imgSource="@{driver.profileImageRes}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:src="@drawable/driver_man" />


        <TextView
            android:id="@+id/txt_driver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_spacing"
            android:fontFamily="@font/lato_bold"
            android:text="@{driver.name}"
            android:textColor="@color/black_my"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_driver"
            app:layout_constraintTop_toTopOf="@+id/img_driver"
            tools:text="Sadriddin Toshmatov" />

        <TextView
            android:id="@+id/txt_dummy_rating"
            style="@style/SmallInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintBottom_toBottomOf="@+id/img_driver"
            app:layout_constraintStart_toStartOf="@+id/txt_driver_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_driver_name" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_smal_spacing"
            android:fontFamily="@font/lato_bold"
            android:text="@{String.valueOf(driver.rating)}"
            android:textColor="@color/black_my"
            app:layout_constraintBottom_toBottomOf="@+id/txt_dummy_rating"
            app:layout_constraintStart_toEndOf="@+id/txt_dummy_rating"
            app:layout_constraintTop_toTopOf="@+id/txt_dummy_rating"
            tools:text="5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_smal_spacing"
            app:layout_constraintBottom_toBottomOf="@+id/txt_rating"
            app:layout_constraintStart_toEndOf="@+id/txt_rating"
            app:layout_constraintTop_toTopOf="@+id/txt_rating"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/txt_drives_dummy"
            style="@style/SmallInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_spacing"
            android:text="@string/drives"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/txt_drives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(driver.numberOfDrives)}"
            app:layout_constraintBottom_toBottomOf="@+id/txt_drives_dummy"
            app:layout_constraintStart_toEndOf="@+id/txt_drives_dummy"
            app:layout_constraintTop_toTopOf="@+id/txt_drives_dummy"
            app:layout_constraintVertical_bias="0.0"
            tools:text="1589" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>